--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ torch-geometric = "^2.6.1"
 pyyaml = "^6.0.2"
 notebook = "^7.3.3"
 xgboost = "^2.1.4"
+transformers = "^4.49.0"
 
 
 [build-system]
