--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ embedding:
   model_name: "yiyanghkust/finbert-tone"
 
 models:
-  input_dim: 8192
-  hidden_dim_1: 1024
-  hidden_dim_2: 128
-  hidden_dim_3: 32
+  input_dim: 768 #8192
+  hidden_dim_1: 256 #1024
+  hidden_dim_2: 64 #128
+  hidden_dim_3: 16 #32
