--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pyyaml = "^6.0.2"
 notebook = "^7.3.3"
 xgboost = "^2.1.4"
 transformers = "^4.49.0"
+db-sqlite3 = "^0.0.1"
+openpyxl = "^3.1.5"
 
 
 [build-system]
