--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ xgboost = "^2.1.4"
 transformers = "^4.49.0"
 db-sqlite3 = "^0.0.1"
 openpyxl = "^3.1.5"
+matplotlib = "^3.10.3"
 
 
 [build-system]
