--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ transformers = "^4.49.0"
 db-sqlite3 = "^0.0.1"
 openpyxl = "^3.1.5"
 matplotlib = "^3.10.3"
+edgar = "^5.6.3"
+sec-parser = "^0.58.1"
+sec-parsers = "^0.549"
+sec-downloaders = "^0.4"
+sec-cik-mapper = "^2.1.0"
+edgartools = "^4.1.2"
+gensim = "^4.3.3"
 
 
 [build-system]
