--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ sec-downloaders = "^0.4"
 sec-cik-mapper = "^2.1.0"
 edgartools = "^4.1.2"
 gensim = "^4.3.3"
+faiss-cpu = "^1.11.0"
 
 
 [build-system]
