--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ sec-cik-mapper = "^2.1.0"
 edgartools = "^4.1.2"
 gensim = "^4.3.3"
 faiss-cpu = "^1.11.0"
+protobuf = "^6.31.1"
+generativeai = "^0.0.1"
+google-genai = "^1.24.0"
+google-cloud-aiplatform = "^1.101.0"
 
 
 [build-system]
